streams correct
